--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -3,19 +3,17 @@ name: Sync Leetcode
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 8 * * 6"
+    - cron: "0 8 * * 6" # Adjust the schedule as needed
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Sync
+      - name: Sync Leetcode
         uses: joshcai/leetcode-sync@v1.5
         with:
           github-token: ${{ github.token }}
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
           destination-folder: my-folder
-          verbose: true
-          commit-header: '[LeetCode Sync]'
